# power_gen

./: .gitignore  AGENTS.md  README.md  WOLFRAM_DATA_SUMMARY.md  claude.md  debug-panel.js  deploy.py  deploy_old.py  device-geometry.js  device-instance.js  device-pipeline-manager.js  grok.md  hardware-bridge.js  hardware_connection.md  index.html  main.js  multi-device-visualizer.js  package-lock.json  package.json  performance-profiler.js  playwright.config.js  scientific-data.js  tsconfig.json  vite.config.js  webgpu-manager.js
.github/: copilot-instructions.md
.playwright-mcp/: page-2026-06-14T05-35-19-166Z.yml  page-2026-06-14T06-12-19-056Z.yml
cpp/: CMakeLists.txt  Makefile  README.md
cpp/src/: sim_core.cpp  sim_core.h  telemetry_export.h
docs/: AGENTS.md  BINDINGS.md  DEVICE_GALLERY.md  GLTF_ASSETS.md  LIGHTING_RIG.md  PHYSICS_CONSTANTS.md  SEG_EXPLAINER.md  SEG_ROLLER_PROTOTYPES.md  SHADERS.md  TELEMETRY.md  WEBGL2.md  WEBGPU.md  hardware_connection.md
e2e/: app.spec.js  helpers.js
physics/: constants.json
scripts/: build-colab.sh  build-wasm.sh  check-wgsl.sh  codegen-physics-constants.mjs  extract-wgsl.mjs  generate-seg-housing-glb.mjs  split-large-files.mjs
shaders/: seg-magnetic.wgsl
src/: ValidatedConstants.ts  camera-controller.js  debug-panel.js  device-compute.js  device-geometry.js  device-instance.js  device-mesh-layouts.js  device-pipeline-manager.js  device-uniforms.js  electromagnet-controller.js  energy-pipe.js  fallback-physics.ts  hardware-bridge.js  hardware-panel.js  heron-layout.d.ts  heron-layout.js  index.html  index.ts  (+34 more)
(+175 files in other folders)
